--- a/cell.html
+++ b/cell.html
@@ -54,12 +54,10 @@ equations.  For large-scale models, these computations can be
 performed in parallel, where the simulation domain and particles are
 partitioned across processors.
 </P>
-<P>Our open-source simulator is called
-<A HREF = "http://chemcell.sandia.gov">ChemCell</A>.  Documentation, images, movies,
-and download information are available on the <A HREF = "http://chemcell.sandia.gov">ChemCell WWW
-page</A> and the <A HREF = "http://chemcell.sandia.gov/doc/Manual.html">ChemCell doc
-pages</A> describes the
-software in more detail.
+<P>Our open-source simulator is called <A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A>.
+Documentation, images, movies, and download information are available
+on the <A HREF = "https://sjplimp.github.io/chemcell">ChemCell website</A> and the <A HREF = "https://sjplimp.github.io/chemcell/doc/Manual.html">ChemCell doc
+pages</A> describes the software in more detail.
 </P>
 <P>ChemCell is similar in spirit to other particle-based biological cell
 simulators such as <A HREF = "http://www.mcell.cnl.salk.edu">MCell</A>, <A HREF = "http://www.smoldyn.org">Smoldyn</A>, and
@@ -68,6 +66,10 @@ models reaction/diffusion via continuum PDEs in a spatial
 representation of a cell, and E-Cell which has a rich variety of
 continuum and stochastic solvers for non-spatial cell models.
 </P>
+
+
+
+
 
 
 
