--- a/dsmc.html
+++ b/dsmc.html
@@ -7,9 +7,11 @@
 </H3>
 <P>Note: The text below describes an older 2d DSMC code called ICARUS we
 developed at Sandia in the 1990s.  A newer 3d code called SPARTA, has
-its own <A HREF = "http://sparta.sandia.gov">web page</A>.  Links to SPARTA papers
-are also listed here:
+its own <A HREF = "https://sparta.github.io">webpage</A>.  Links to SPARTA papers are also listed
+here:
 </P>
+
+
 <P><B>Molecular-Level Simulations of Turbulence and Its Decay</B>,
 M. A. Gallis, N. P. Bitter, T. P. Koehler, J. R. Torczynski,
 S. J. Plimpton, G. Papadakis, Phys Rev Letters, 118, 064501 (2017).
