--- a/genehunter.html
+++ b/genehunter.html
@@ -159,9 +159,9 @@ file and a couple of our output for verification purposes.
 </H3>
 <P>Gavin Conant is the primary contact for questions and problems with
 the code.  If you cannot reach Gavin, Steve Plimpton can also provide
-assistance (<A HREF = "mailto:sjplimp@sandia.gov">sjplimp at sandia.gov</A>).  We
-would be delighted to hear if this version of Genehunter is helping
-with your research and to discuss any ideas you have about the
-implementation of or modifications to the code.
+assistance (sjplimp at sandia.gov).  We would be delighted to hear if
+this version of Genehunter is helping with your research and to
+discuss any ideas you have about the implementation of or
+modifications to the code.
 </P>
 </HTML>
