--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
      hspace="0" alt=""></td></tr>
 </table>
 
-<P>I'm a staff member at <A HREF = "http://www.sandia.gov">Sandia National Laboratories</A>, a US
-<A HREF = "http://www.doe.gov">Department of Energy</A> lab, in the <A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/index.cfm">Center for Computing
+<P>I'm a staff member at <A HREF = "https://www.sandia.gov">Sandia National Laboratories</A>, a US
+<A HREF = "https://www.doe.gov">Department of Energy</A> lab, in the <A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/index.cfm">Center for Computing
 Research</A>.  I'm currently in the Computational Multiscale
 department.  Previously I've been in the Scalable Algorithms,
 Computational Biology, and Parallel Computational Sciences
@@ -71,21 +71,17 @@ problems.
 <LI><A HREF = "download.html">Software for download</A>: 
 
 <UL><LI><A HREF = "https://www.lammps.org">LAMMPS</A> = classical molecular dynamics
-<LI><A HREF = "http://spparks.sandia.gov">SPPARKS</A> = kinetic and Metropolis Monte Carlo
+<LI><A HREF = "https://spparks.github.io">SPPARKS</A> = kinetic and Metropolis Monte Carlo
 <LI><A HREF = "https://sparta.github.io">SPARTA</A> = Direct Simulation Monte Carlo (DSMC)
 <LI><A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A> = spatial reaction/diffusion in biological cells
-<LI><A HREF = "http://cslib.sandia.gov">CSlib</A> = client/server messaging library
+<LI><A HREF = "cslib">CSlib</A> = client/server messaging library
 <LI><A HREF = "https://lammps.github.io/fftmpi">fftMPI</A> = parallel 3d/2d FFT library
 <LI><A HREF = "https://sjplimp.github.io/mapreduce">MapReduce-MPI</A> = MapReduce library on top of MPI
 <LI><A HREF = "https://sjplimp.github.io/phish">PHISH</A> = stream processing library on top of MPI
-<LI><A HREF = "http://firehose.sandia.gov">FireHose</A> = stream processing benchmarks
+<LI><A HREF = "firehose">FireHose</A> = stream processing benchmarks
 <LI><A HREF = "https://cross-sim.sandia.gov">CrossSim</A> = simulator for modeling resisitve memory (analog) devices for neuromorphic computing
 <LI><A HREF = "https://lammps.github.io/pizza">Pizza.py</A> = Python-based pre- and post-processing tools for LAMMPS, SPPARKS, SPARTA, ChemCell 
 </UL>
-
-
-
-
 
 
 
@@ -120,7 +116,7 @@ Molecular Dynamics (MD):
 <LI>  MD codes I distribute: <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF = "download.html#pd">ParaDyn</A>
 <LI>  MD simulations: <A HREF = "mdsim.html">papers</A>,     <A HREF = "http://www.lammps.org/pictures.html">pictures</A>,     <A HREF = "http://www.lammps.org/movies.html">movies</A> 
 </UL>
-<A HREF = "kmc.html">Kinetic Monte Carlo</A> - KMC and Metropolis MC simulator   <A HREF = "http://spparks.sandia.gov">SPPARKS</A> 
+<A HREF = "kmc.html">Kinetic Monte Carlo</A> - KMC and Metropolis MC simulator   <A HREF = "https://spparks.github.io">SPPARKS</A> 
 <BR>
 <A HREF = "dsmc.html">Direct Simulation Monte Carlo</A> - low-density reacting flows   via particles, <A HREF = "https://sparta.github.io">SPARTA</A> and <A HREF = "dsmc.html">Icarus</A> 
 <BR>
@@ -169,8 +165,8 @@ Albuquerque, NM 87185-1316 <BR>
 <A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/index.cfm">Center for Computing Research</A><BR>
 <A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/templates/insert/research.cfm">Center research</A><BR>
 <A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/templates/insert/org_chart.cfm">Center staff members</A><BR>
-<A HREF = "http://www.sandia.gov">Sandia National Laboratories</A><BR>
-<A HREF = "http://www.sandia.gov/general/privacy-security/index.html">Sandia Privacy and Security statement</A> <BR>
+<A HREF = "https://www.sandia.gov">Sandia National Laboratories</A><BR>
+<A HREF = "https://www.sandia.gov/general/privacy-security/index.html">Sandia Privacy and Security statement</A> <BR>
 
 
 
