--- a/informatics.html
+++ b/informatics.html
@@ -25,14 +25,17 @@ packages.
 </P>
 <P>The first implements MapReduce on top of distributed-memory message
 passing (<A HREF = "http://en.wikipedia.org/wiki/Message_Passing_Interface">MPI</A>).  Our open-source software is called the
-<A HREF = "http://mapreduce.sandia.gov">MapReduce-MPI (MR-MPI) library</A>, and can
-be downloaded <A HREF = "download.html">here</A>.  The <A HREF = "http://mapreduce.sandia.gov/doc/Manual.html">doc pages for the
-library</A> describe the
-software in more detail.
+<A HREF = "https://sjplimp.github.io/mapreduce">MapReduce-MPI (MR-MPI) library</A>, and can be downloaded
+<A HREF = "download.html">here</A>.  The <A HREF = "https://sjplimp.github.io/mapreduce/doc/Manual.html">doc pages for the library</A>
+describe the software in more detail.
 </P>
+
+
+
+
 <P>Collaborators on the MapReduce-MPI library:
 </P>
-<UL><LI>  <A HREF = "http://www.cs.sandia.gov/~kddevin">Karen Devine</A>, Sandia
+<UL><LI>  <A HREF = "https://cs.sandia.gov/~kddevin">Karen Devine</A>, Sandia
 <LI>  Jon Berry, Sandia 
 </UL>
 <P>The second is a small open-source library that serves as a framework
