--- a/kmc.html
+++ b/kmc.html
@@ -17,21 +17,23 @@ in one iteration/timestep of the simulation code, without the need to
 track low-level dynamics leading up to the event, e.g. atomic
 vibrations.
 </P>
-<P>We've written an open-source KMC simulator called
-<A HREF = "http://spparks.sandia.gov">SPPARKS</A> which can perform both KMC and
-Metropolis Monte Carlo updating of various models.  The goal of
-SPPARKS is to provide a framework where basic algorithms for KMC and
-MMC are provided both in serial and parallel, and which allows new
-applications to be easily added.  Our main focus thus far has been
-on-lattice KMC for materials phenonmena like grain growth, surface
-growth and deposition, and void growth.  But we have also been working
-to develop off-lattice KMC applications as well.
+<P>We've written an open-source KMC simulator called <A HREF = "https://spparks.github.io">SPPARKS</A>
+which can perform both KMC and Metropolis Monte Carlo updating of
+various models.  The goal of SPPARKS is to provide a framework where
+basic algorithms for KMC and MMC are provided both in serial and
+parallel, and which allows new applications to be easily added.  Our
+main focus thus far has been on-lattice KMC for materials phenonmena
+like grain growth, surface growth and deposition, and void growth.
+But we have also been working to develop off-lattice KMC applications
+as well.
 </P>
-<P><A HREF = "http://spparks.sandia.gov">SPPARKS</A> can be downloaded
-<A HREF = "download.html">here</A>, and the <A HREF = "http://spparks.sandia.gov/doc/Manual.html">SPPARKS doc
-pages</A> describes the
-software in more detail.
+<P><A HREF = "https://spparks.github.io">SPPARKS</A> can be downloaded <A HREF = "download.html">here</A>, and the
+<A HREF = "https://spparks.github.io/doc/Manual.html">SPPARKS doc pages</A> describes the software in more detail.
 </P>
+
+
+
+
 <P>Collaborators on SPPARKS:
 </P>
 <UL><LI>  Aidan Thompson, Sandia
