--- a/mdsim.html
+++ b/mdsim.html
@@ -16,12 +16,14 @@ codes for doing MD.
 </P>
 <P>Parallel MD codes I've written and distribute freely are available
 from <A HREF = "download.html">this page</A>.  Simulation work of others using these
-codes is listed on the <A HREF = "http://lammps/sandia.gov/papers.html">Publications
-page</A> of the <A HREF = "http://lammps.sandia.gov">LAMMPS WWW
-Site</A>, along with
-<A HREF = "http://lammps.sandia.gov/pictures.html">pictures</A> and
-<A HREF = "http://lammps.sandia.gov/movies.html">movies</A>.
+codes is listed on the <A HREF = "https://www.lammps.org/papers.html">Publications
+page</A> of the <A HREF = "https://www.lammps.org">LAMMPS
+website</A>, along with
+<A HREF = "https://www.lammps.org/pictures.html">pictures</A> and
+<A HREF = "https://www.lammps.org/movies.html">movies</A>.
 </P>
+
+
 <HR>
 
 <HR>
