--- a/nimrod.html
+++ b/nimrod.html
@@ -56,12 +56,10 @@ below; details are given on the <A HREF = "http://nimrodteam.org">NIMROD home pa
 <P>The linear algebra kernel within NIMROD is a conjugate gradient
 solver. Other team members have written several preconditioners for
 the solver, including Jacobi, line, and block-inversion
-preconditioners. Currently I'm working to integrate the <A HREF = "http://www.cs.sandia.gov/CRF/aztec1.html">AZTEC</A>
-parallel linear solver package into NIMROD so we can experiment with
-2-level multigrid and other preconditioning options.
+preconditioners. Currently I'm working to integrate the AZTEC parallel
+linear solver package into NIMROD so we can experiment with 2-level
+multigrid and other preconditioning options.
 </P>
-
-
 <P>Collaborators on this project:
 </P>
 <UL><LI>  Carl Sovinec, LANL, now U Wisconsin
