--- a/papers.html
+++ b/papers.html
@@ -17,7 +17,7 @@ these links:
 <LI><A HREF = "kmc.html">Kinetic Monte Carlo</A> - kinetic and Metropolis Monte Carlo modeling
 <LI><A HREF = "dsmc.html">Direct Simulation Monte Carlo</A> - low-density reacting flows   via particles
 <LI><A HREF = "informatics.html">Informatics</A> - informatics algorithms and big-data processing
-<LI><A HREF = "cell.html">Biological Cell Modeling</A> - particle-based reaction/diffusion modeling with <A HREF = "http://chemcell.sandia.gov">ChemCell</A>
+<LI><A HREF = "cell.html">Biological Cell Modeling</A> - particle-based reaction/diffusion modeling with <A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A>
 <LI><A HREF = "genehunter.html">GeneHunter</A> - genetic linkage analysis
 <LI><A HREF = "chisels.html">ChISELS</A> - surface evolution model of semiconductor processing   for micromachine devices (MEMS)
 <LI><A HREF = "rad.html">Radiation Transport</A> - Boltzmann equation for thermal   and X-ray radiation
@@ -33,6 +33,8 @@ these links:
 <LI><A HREF = "hpc.html">High Performance Computing (HPC)</A> - neuro-inspired computing,   performance comparisons of parallel architectures
 <LI><A HREF = "overview.html">Parallel Computing</A> - general overviews 
 </UL>
+
+
 <HR>
 
 <HR>
