change to HPC page

--- a/hpc.html
+++ b/hpc.html
@@ -69,10 +69,11 @@ Architectures, 19, 49-64 (2017). (<A HREF = "abstracts/bica17.html">abstract</A>
 </P>
 <HR>
 
-<H4>Performance comparisons for traditional large-scale parallel machines versus commodity clusters 
+<H4>Performance comparisons for traditional large-scale parallel machines
+versus commodity clusters 
 </H4>
 <P>Sandia has a cluster-computing effort to build and use a series of
-large-scale cluster supercomputers with off-the-shelf commodity
+large-scale cluster supercomputers with off-thte-shelf commodity
 parts. Collectively these machines were called CPlant, which is meant
 to invoke images of a factory (producing computational cycles) and of
 a living/growing heterogeneous entity.
