more links to fix

--- a/index.html
+++ b/index.html
@@ -71,17 +71,19 @@ problems.
 <LI><A HREF = "download.html">Software for download</A>: 
 
 <UL><LI><A HREF = "https://www.lammps.org">LAMMPS</A> = classical molecular dynamics
-<LI><A HREF = "https://spparks.github.io">SPPARKS</A> = kinetic and Metropolis Monte Carlo
 <LI><A HREF = "https://sparta.github.io">SPARTA</A> = Direct Simulation Monte Carlo (DSMC)
+<LI><A HREF = "https://spparks.github.io">SPPARKS</A> = kinetic and Metropolis Monte Carlo
 <LI><A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A> = spatial reaction/diffusion in biological cells
 <LI><A HREF = "https://lammps.github.io/cslib">CSlib</A> = client/server messaging library
 <LI><A HREF = "https://lammps.github.io/fftmpi">fftMPI</A> = parallel 3d/2d FFT library
 <LI><A HREF = "https://sjplimp.github.io/mapreduce">MapReduce-MPI</A> = MapReduce library on top of MPI
 <LI><A HREF = "https://sjplimp.github.io/phish">PHISH</A> = stream processing library on top of MPI
-<LI><A HREF = "firehose">FireHose</A> = stream processing benchmarks
+<LI><A HREF = "https://stream-benchmarking.github.io/firehose">FireHose</A> = stream processing benchmarks
 <LI><A HREF = "https://cross-sim.sandia.gov">CrossSim</A> = simulator for modeling resisitve memory (analog) devices for neuromorphic computing
 <LI><A HREF = "https://lammps.github.io/pizza">Pizza.py</A> = Python-based pre- and post-processing tools for LAMMPS, SPPARKS, SPARTA, ChemCell 
 </UL>
+
+
 
 
 
