update home page

--- a/index.html
+++ b/index.html
@@ -61,11 +61,6 @@ some use structured grids or finite elements.  Most of the codes I
 develop are for materials modeling, some for biology and informatics
 problems.
 </P>
-<LI><A HREF = "#ci">Current interests</A>
-<LI><A HREF = "#pp">Past projects</A>
-<LI><A HREF = "papers.html">Publications</A>, see more info at <A HREF = "https://scholar.google.com/citations?user=Ny7N6KQAAAAJ&hl=en">Google Scholar</A>
-<LI><A HREF = "class.html">University course in parallel computing</A> 
-
 <P>
 </P>
 <LI><A HREF = "download.html">Software for download</A>: 
@@ -106,40 +101,32 @@ problems.
 
 <P>
 </P>
-<LI><A HREF = "#hrm">How to reach me</A>
-<LI><A HREF = "quotes.html">Humorous quotations</A>
-<LI><A HREF = "#rsl">Related Sandia links</A> 
+<LI><A HREF = "papers.html">Publications</A>, see more info at <A HREF = "https://scholar.google.com/citations?user=Ny7N6KQAAAAJ&hl=en">Google Scholar</A>
+<LI><A HREF = "class.html">University course in parallel computing</A>
+<LI><A HREF = "quotes.html">Humorous quotations</A> 
 
+<P>
+</P>
 <HR>
 
 <A NAME = "ci"></A><H3>Current Interests 
 </H3>
-Molecular Dynamics (MD): 
-<BR>
-<UL><LI>  <A HREF = "md.html">parallel algorithms</A>
-<LI>  MD codes I distribute: <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF = "download.html#pd">ParaDyn</A>
-<LI>  MD simulations: <A HREF = "mdsim.html">papers</A>,     <A HREF = "http://www.lammps.org/pictures.html">pictures</A>,     <A HREF = "http://www.lammps.org/movies.html">movies</A> 
-</UL>
-<A HREF = "kmc.html">Kinetic Monte Carlo</A> - KMC and Metropolis MC simulator   <A HREF = "https://spparks.github.io">SPPARKS</A> 
-<BR>
-<A HREF = "dsmc.html">Direct Simulation Monte Carlo</A> - low-density reacting flows   via particles, <A HREF = "https://sparta.github.io">SPARTA</A> and <A HREF = "dsmc.html">Icarus</A> 
-<BR>
-<A HREF = "hpc.html">High Performance Computing (HPC)</A> - neuro-inspired computing,   performance comparisons of parallel architectures 
-<BR>
-<A HREF = "cell.html">Biological Cell Modeling</A> - particle-based reaction/diffusion   simulator <A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A> 
-<BR>
-<A HREF = "informatics.html">Informatics</A> - data-intensive computing via a   <A HREF = "https://sjplimp.github.io/mapreduce">MapReduce-MPI library</A>,   and a stream-processing <A HREF = "https://sjplimp.github.io/phish">PHISH library</A> 
-<BR>
-<A HREF = "https://lammps.github.io/pizza">Pizza.py Toolkit</A> - Python-based toolkit for   simulation setup, analysis, plotting, viz 
-<BR>
-<A HREF = "algorithms.html">Parallel Algorithms</A>: 
-<BR>
-<UL><LI>  <A HREF = "download.html#gups">HPCC RandomAccess (GUPS) benchmark</A>,   <A HREF = "download.html#fft">FFTs</A>, grid transfer,   dynamic load-balancing, tinkertoy parallel programming,   matrix-vector multiply and many-body algorithms 
-</UL>
+Molecular Dynamics (MD): <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF = "download.html#pd">ParaDyn</A>,   <A HREF = "md.html">parallel algorithms</A>, simulations   (<A HREF = "mdsim.html">papers</A>, <A HREF = "http://www.lammps.org/pictures.html">pictures</A>,    <A HREF = "http://www.lammps.org/movies.html">movies</A>)<BR>
+<A HREF = "dsmc.html">Direct Simulation Monte Carlo</A> - low-density reacting flows   via particles, <A HREF = "https://sparta.github.io">SPARTA</A> and <A HREF = "dsmc.html">Icarus</A><BR>
+<A HREF = "kmc.html">Kinetic Monte Carlo</A> - KMC and Metropolis MC simulator   <A HREF = "https://spparks.github.io">SPPARKS</A><BR>
+<A HREF = "https://lammps.github.io/fftmpi">Parallel FFTs</A> - parallel distributed 3d/2d FFTs<BR>
+<A HREF = "https://lammps.github.io/pizza">Pizza.py Toolkit</A> - Python-based tools   for simulation setup, analysis, plotting, viz <BR>
+
+<P>
+</P>
 <HR>
 
 <A NAME = "pp"></A><H3>Past Projects 
 </H3>
+<A HREF = "informatics.html">Informatics</A> - data-intensive computing via a   <A HREF = "https://sjplimp.github.io/mapreduce">MapReduce-MPI library</A>,   and a stream-processing <A HREF = "https://sjplimp.github.io/phish">PHISH library</A><BR>
+<A HREF = "hpc.html">High Performance Computing (HPC)</A> - neuro-inspired computing,   performance comparisons of parallel architectures<BR>
+<A HREF = "cell.html">Biological Cell Modeling</A> - particle-based reaction/diffusion   simulator <A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A><BR>
+<A HREF = "algorithms.html">Parallel Algorithms</A>:   grid transfer, dynamic load-balancing, tinkertoy parallel programming,   matrix-vector multiply and many-body algorithms,   <A HREF = "download.html#gups">HPCC RandomAccess (GUPS) benchmark</A><BR>
 <A HREF = "genehunter.html">Gene Finding</A> - parallelization of the   <A HREF = "download.html#gene">Genehunter</A> genetic linkage analysis program<BR>
 <A HREF = "rad.html">Radiation Transport</A> - Boltzmann equation for thermal and   X-ray radiation<BR>
 <A HREF = "chisels.html">ChISELS</A> - surface evolution model of semiconductor processing   for micromachine devices (MEMS)<BR>
@@ -152,6 +139,8 @@ Molecular Dynamics (MD):
 <A HREF = "ebeam.html">Electron Microscopy</A> - Monte Carlo trajectory simulation<BR>
 <A HREF = "overview.html">Parallel Computing</A> - general overviews <BR>
 
+<P>
+</P>
 <HR>
 
 <A NAME = "hrm"></A><H3>How to Reach Me 
@@ -162,6 +151,8 @@ Computational Multiscale Dept, MS 1316<BR>
 Sandia National Laboratories<BR>
 Albuquerque, NM 87185-1316 <BR>
 
+<P>
+</P>
 <HR>
 
 <A NAME = "rsl"></A><H3>Related Sandia Links 
