--- a/download.html
+++ b/download.html
@@ -39,25 +39,25 @@ from Sept 2004 thru Dec 2020.
 <P><B>Molecular dynamics codes:</B> 
 </P>
 <DIV ALIGN=center><TABLE  BORDER=2 >
-<TR ALIGN="left"><TD ><A HREF = "https://www.lammps.org">LAMMPS</A> </TD><TD > general materials modeling MD code </TD><TD  ALIGN ="center"> GPL/LGPL </TD><TD > 100+ MB </TD><TD > <A HREF = "https://www.lammps.org/download.html">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "#pd">ParaDyn</A> </TD><TD > embedded atom method (EAM) code </TD><TD  ALIGN ="center"> - </TD><TD > 390 KB </TD><TD > <A HREF = "tars/paradyn.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "lj">Lennard-Jones</A> </TD><TD > LJ codes with 3 parallel algorithms </TD><TD  ALIGN ="center"> - </TD><TD > 47 KB </TD><TD > <A HREF = "tars/paradyn.tar.gz">download</A>
+<TR ALIGN="left"><TD ><A HREF = "https://www.lammps.org">LAMMPS</A> </TD><TD > <A HREF = "https://www.lammps.org/download.html">download</A> </TD><TD  ALIGN ="center"> general materials modeling MD code </TD><TD > GPL/LGPL </TD><TD > 100+ MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "#pd">ParaDyn</A> </TD><TD > <A HREF = "tars/paradyn.tar.gz">download</A> </TD><TD  ALIGN ="center"> embedded atom method (EAM) code </TD><TD > - </TD><TD > 390 KB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "lj">Lennard-Jones</A> </TD><TD > <A HREF = "tars/paradyn.tar.gz">download</A> </TD><TD  ALIGN ="center"> LJ codes with 3 parallel algorithms </TD><TD > - </TD><TD > 47 KB
 </TD></TR></TABLE></DIV>
 
 <P><B>Other software:</B>
 </P>
 <DIV ALIGN=center><TABLE  BORDER=2 >
-<TR ALIGN="left"><TD ><A HREF = "https://sparta.github.io">SPARTA</A> </TD><TD > Direct Simulation Monte Carlo (DSMC) simulator </TD><TD  ALIGN ="center"> GPL </TD><TD > 4.4 MB </TD><TD > <A HREF = "tars/sparta.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "https://spparks.github.io">SPPARKS</A> </TD><TD > Kinetic and Metropolis Monte Carlo simulator </TD><TD  ALIGN ="center"> GPL </TD><TD > 3.5 MB </TD><TD > <A HREF = "tars/spparks.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A> </TD><TD > particle-based biological cell simulator </TD><TD  ALIGN ="center"> GPL </TD><TD > 1.3 MB </TD><TD > <A HREF = "tars/chemcell.tar.gz">download</A>  </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/mapreduce">Mapreduce-MPI</A> </TD><TD > MapReduce-MPI library </TD><TD  ALIGN ="center"> BSD </TD><TD > 1.8 MB </TD><TD > <A HREF = "tars/mapreduce.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/phish">PHISH</A> </TD><TD > PHISH streaming library </TD><TD  ALIGN ="center"> BSD </TD><TD > 1.3 MB </TD><TD > <A HREF = "tars/phish.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "https://lammps.github.io/cslib">CSlib</A> </TD><TD > client/server messaging library </TD><TD  ALIGN ="center"> BSD </TD><TD > 1.0 MB </TD><TD > <A HREF = "tars/cslib.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "https://lammps.github.io/fftmpi">fftMPI</A> </TD><TD > parallel 3d/2d complex FFT library </TD><TD  ALIGN ="center"> BSD </TD><TD > 0.9 MB </TD><TD > <A HREF = "tars/fftmpi.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "https://lammps.github.io/pizza">Pizza.py Toolkit</A> </TD><TD > analysis/plotting/viz for LAMMPS, SPARTA, SPPARKS, ChemCell </TD><TD  ALIGN ="center"> GPL </TD><TD > 1.6 MB </TD><TD > <A HREF = "tars/pizza.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "#gups">HPCC RandomAccess</A> </TD><TD > algorithm for <A HREF = "http://icl.cs.utk.edu/hpcc/index.html">HPCC</A> GUPS benchmark </TD><TD  ALIGN ="center"> - </TD><TD > 22 KB </TD><TD > <A HREF = "tars/gups.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "#gene">Parallel GeneHunter</A> </TD><TD > parallel genetic linkage analysis </TD><TD  ALIGN ="center"> - </TD><TD > 740 KB </TD><TD > <A HREF = "tars/genehunter_mpi_64.tar.gz">download</A> </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "#txt2html">txt2html</A> </TD><TD > text file to HTML converter for webpages and documentation </TD><TD  ALIGN ="center"> - </TD><TD > 19 KB </TD><TD > <A HREF = "tars/txt2html.tar.gz">download</A>
+<TR ALIGN="left"><TD ><A HREF = "https://sparta.github.io">SPARTA</A> </TD><TD > <A HREF = "tars/sparta.tar.gz">download</A> </TD><TD  ALIGN ="center"> Direct Simulation Monte Carlo (DSMC) simulator </TD><TD > GPL </TD><TD > 4.4 MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://spparks.github.io">SPPARKS</A> </TD><TD > <A HREF = "tars/spparks.tar.gz">download</A> </TD><TD  ALIGN ="center"> Kinetic and Metropolis Monte Carlo simulator </TD><TD > GPL </TD><TD > 3.5 MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A> </TD><TD > <A HREF = "tars/chemcell.tar.gz">download</A> </TD><TD  ALIGN ="center"> particle-based biological cell simulator </TD><TD > GPL </TD><TD > 1.3 MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/mapreduce">Mapreduce-MPI</A> </TD><TD > <A HREF = "tars/mapreduce.tar.gz">download</A> </TD><TD  ALIGN ="center"> MapReduce-MPI library </TD><TD > BSD </TD><TD > 1.8 MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/phish">PHISH</A> </TD><TD > <A HREF = "tars/phish.tar.gz">download</A> </TD><TD  ALIGN ="center"> PHISH streaming library </TD><TD > BSD </TD><TD > 1.3 MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://lammps.github.io/cslib">CSlib</A> </TD><TD > <A HREF = "tars/cslib.tar.gz">download</A> </TD><TD  ALIGN ="center"> client/server messaging library </TD><TD > BSD </TD><TD > 1.0 MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://lammps.github.io/fftmpi">fftMPI</A> </TD><TD > <A HREF = "tars/fftmpi.tar.gz">download</A> </TD><TD  ALIGN ="center"> parallel 3d/2d complex FFT library </TD><TD > BSD </TD><TD > 0.9 MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://lammps.github.io/pizza">Pizza.py Toolkit</A> </TD><TD > <A HREF = "tars/pizza.tar.gz">download</A> </TD><TD  ALIGN ="center"> analysis/plotting/viz for LAMMPS, SPARTA, SPPARKS, ChemCell </TD><TD > GPL </TD><TD > 1.6 MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "#gups">HPCC RandomAccess</A> </TD><TD > <A HREF = "tars/gups.tar.gz">download</A> </TD><TD  ALIGN ="center"> algorithm for <A HREF = "http://icl.cs.utk.edu/hpcc/index.html">HPCC</A> GUPS benchmark </TD><TD > - </TD><TD > 22 KB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "#gene">Parallel GeneHunter</A> </TD><TD > <A HREF = "tars/genehunter_mpi_64.tar.gz">download</A> </TD><TD  ALIGN ="center"> parallel genetic linkage analysis </TD><TD > - </TD><TD > 740 KB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "#txt2html">txt2html</A> </TD><TD > <A HREF = "tars/txt2html.tar.gz">download</A> </TD><TD  ALIGN ="center"> text file to HTML converter for webpages and documentation </TD><TD > - </TD><TD > 19 KB
 </TD></TR></TABLE></DIV>
 
 
