--- a/download.html
+++ b/download.html
@@ -41,7 +41,7 @@ from Sept 2004 thru Dec 2020.
 <DIV ALIGN=center><TABLE  BORDER=2 >
 <TR ALIGN="left"><TD ><A HREF = "https://www.lammps.org">LAMMPS</A> </TD><TD > <A HREF = "https://www.lammps.org/download.html">download</A> </TD><TD  ALIGN ="center"> general materials modeling MD code </TD><TD > GPL/LGPL </TD><TD > 100+ MB </TD></TR>
 <TR ALIGN="left"><TD ><A HREF = "#pd">ParaDyn</A> </TD><TD > <A HREF = "tars/paradyn.tar.gz">download</A> </TD><TD  ALIGN ="center"> embedded atom method (EAM) code </TD><TD > - </TD><TD > 390 KB </TD></TR>
-<TR ALIGN="left"><TD ><A HREF = "lj">Lennard-Jones</A> </TD><TD > <A HREF = "tars/paradyn.tar.gz">download</A> </TD><TD  ALIGN ="center"> LJ codes with 3 parallel algorithms </TD><TD > - </TD><TD > 47 KB
+<TR ALIGN="left"><TD ><A HREF = "lj">Lennard-Jones</A> </TD><TD > <A HREF = "tars/lj.tar.gz">download</A> </TD><TD  ALIGN ="center"> LJ codes with 3 parallel algorithms </TD><TD > - </TD><TD > 47 KB
 </TD></TR></TABLE></DIV>
 
 <P><B>Other software:</B>
