update SPARTA size

--- a/download.html
+++ b/download.html
@@ -30,9 +30,10 @@ license</A> or <A HREF = "http://en.wikipedia.org/wiki/BSD_license">modified BSD
 
 
 
-<P>There have been ~56,000 downloads from this page and another ~387,000
-from the <A HREF = "https://www.lammps.org/download.html">LAMMPS download page</A>
-from Sept 2004 thru Dec 2020.
+<P>There were ~58,000 downloads from this page and another ~405,000 from
+the <A HREF = "https://www.lammps.org/download.html">LAMMPS download page</A> from
+Sept 2004 thru mid-year 2021.  At that the website was migrated to
+GitHub and I stopped logging downloads.
 </P>
 <A NAME = "download"></A>
 
@@ -47,7 +48,7 @@ from Sept 2004 thru Dec 2020.
 <P><B>Other software:</B>
 </P>
 <DIV ALIGN=center><TABLE  BORDER=2 >
-<TR ALIGN="left"><TD ><A HREF = "https://sparta.github.io">SPARTA</A> </TD><TD > <A HREF = "tars/sparta.tar.gz">download</A> </TD><TD  ALIGN ="center"> Direct Simulation Monte Carlo (DSMC) simulator </TD><TD > GPL </TD><TD > 4.4 MB </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://sparta.github.io">SPARTA</A> </TD><TD > <A HREF = "tars/sparta.tar.gz">download</A> </TD><TD  ALIGN ="center"> Direct Simulation Monte Carlo (DSMC) simulator </TD><TD > GPL </TD><TD > 25.1 MB </TD></TR>
 <TR ALIGN="left"><TD ><A HREF = "https://spparks.github.io">SPPARKS</A> </TD><TD > <A HREF = "tars/spparks.tar.gz">download</A> </TD><TD  ALIGN ="center"> Kinetic and Metropolis Monte Carlo simulator </TD><TD > GPL </TD><TD > 3.5 MB </TD></TR>
 <TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A> </TD><TD > <A HREF = "tars/chemcell.tar.gz">download</A> </TD><TD  ALIGN ="center"> particle-based biological cell simulator </TD><TD > GPL </TD><TD > 1.3 MB </TD></TR>
 <TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/mapreduce">Mapreduce-MPI</A> </TD><TD > <A HREF = "tars/mapreduce.tar.gz">download</A> </TD><TD  ALIGN ="center"> MapReduce-MPI library </TD><TD > BSD </TD><TD > 1.8 MB </TD></TR>
