--- a/download.html
+++ b/download.html
@@ -32,8 +32,8 @@ license</A> or <A HREF = "http://en.wikipedia.org/wiki/BSD_license">modified BSD
 
 <P>There were ~58,000 downloads from this page and another ~405,000 from
 the <A HREF = "https://www.lammps.org/download.html">LAMMPS download page</A> from
-Sept 2004 thru mid-year 2021.  At that the website was migrated to
-GitHub and I stopped logging downloads.
+Sept 2004 thru mid-year 2021.  At that point this website was migrated
+to GitHub and I stopped logging downloads.
 </P>
 <A NAME = "download"></A>
 
