--- a/papers.html
+++ b/papers.html
@@ -39,6 +39,22 @@ these links:
 
 <HR>
 
+<H4>2022 
+</H4>
+<P><B>LAMMPS - A flexible simulation tool for particle-based materials
+modeling at the atomic, meso, and continuum scales</B>, A. P. Thompson,
+H. M. Aktulga, R. Berger, D. S. Bolintineanu, W. M. Brown,
+P. S. Crozier, P. J. in 't Veld, A. Kohlmeyer, S. G. Moore, T. D.
+Nguyen, R. Shan, M. J. Stevens, J. Tranchida, C. Trott,
+S. J. Plimpton, Comp Phys Comm, 271, 108171 (2022).
+(<A HREF = "abstracts/cpc22.html">abstract</A>)
+DOI:https://doi.org/10.1016/j.cpc.2021.108171
+</P>
+<P>"A parallel algorithm for the concurrent atomistic-continuum
+methodology", A. Diaz, B. Gu, Yang Li, S. J. Plimpton, D. L. McDowell,
+Y. Chen, J Comp Phys, 463, 111140 (2022).
+(<A HREF = "abstracts/jcp22.html">abstract</A>)
+</P>
 <H4>2021 
 </H4>
 <P><B>Rendezvous algorithms for large-scale modeling and simulation</B>,
