--- a/papers.html
+++ b/papers.html
@@ -50,11 +50,13 @@ S. J. Plimpton, Comp Phys Comm, 271, 108171 (2022).
 (<A HREF = "abstracts/cpc22.html">abstract</A>)
 DOI:https://doi.org/10.1016/j.cpc.2021.108171
 </P>
-<P>"A parallel algorithm for the concurrent atomistic-continuum
-methodology", A. Diaz, B. Gu, Yang Li, S. J. Plimpton, D. L. McDowell,
+<P><B>A parallel algorithm for the concurrent atomistic-continuum
+methodology</B>, A. Diaz, B. Gu, Yang Li, S. J. Plimpton, D. L. McDowell,
 Y. Chen, J Comp Phys, 463, 111140 (2022).
 (<A HREF = "abstracts/jcp22.html">abstract</A>)
 </P>
+<HR>
+
 <H4>2021 
 </H4>
 <P><B>Rendezvous algorithms for large-scale modeling and simulation</B>,
