remove Sandia affiliation

--- a/index.html
+++ b/index.html
@@ -29,37 +29,21 @@
     <meta name="Author" content="Steve Plimpton" />
 </HEAD>
 
-<table width="664" height="112" border="0" cellpadding="0"
-       cellspacing="0" summary="layout only">
-<tr width="664" height="101" valign="bottom">
-<td width="557" height="101" valign="bottom">
-<font face="arial, helvetica, sans" size="5" 
-      style="family: arial, helvetica, sans"><b>Steve Plimpton</b></font></td>
-<td align="left" valign="bottom" width="107" height="101" rowspan="2">
-<a href="http://www.sandia.gov/">
-<img src="http://www.sandia.gov/images2002/snl_globe_right03.gif" 
-     width="107" height="112" border="0" align="left" valign="top" 
-     vspace="0" hspace="0" alt="Sandia Home" title="Sandia Home"></a></td></tr>
-<tr width="664" height="11" valign="top">
-<td width="557" height="11" valign="top">
-<img src="http://www.sandia.gov/images2002/gold_rule01.gif" 
-     width="557" height="11" border="0" align="left" valign="top" vspace="0" 
-     hspace="0" alt=""></td></tr>
-</table>
-
-<P>I'm a staff member at <A HREF = "https://www.sandia.gov">Sandia National Laboratories</A>, a US
-<A HREF = "https://www.doe.gov">Department of Energy</A> lab, in the <A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/index.cfm">Center for Computing
-Research</A>.  I'm currently in the Computational Multiscale
-department.  Previously I've been in the Scalable Algorithms,
-Computational Biology, and Parallel Computational Sciences
-departments.
+<P>I recently retired (Oct 2022) from <A HREF = "snl">Sandia National Laboratories</A>,
+a US <A HREF = "doe">Department of Energy</A> lab, where I worked as a computational
+scientist in its <A HREF = "1400">Center for Computing Research</A>.
 </P>
-<P>My research involves implementing and using scientific simulations
-designed for parallel supercomputers, which often requires creation of
-efficient parallel algorithms.  Many of the models are particle based,
-some use structured grids or finite elements.  Most of the codes I
-develop are for materials modeling, some for biology and informatics
-problems.
+<P>I am still involved in doing some techincal work, particulary for the
+open source codes listed below.  You can reach me with a technical
+question or idea at "sjplimp at gmail.com", though I may not respond
+immediately!
+</P>
+<P>My research at Sandia involved implementing and using scientific
+simulations designed for parallel supercomputers, which often requires
+creation of efficient parallel algorithms.  Many of the models are
+particle based, some use structured grids or finite elements.  Most of
+the codes I develop are for materials modeling, some for biology and
+informatics problems.
 </P>
 <P>
 </P>
@@ -139,40 +123,24 @@ Molecular Dynamics (MD): <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF 
 <A HREF = "ebeam.html">Electron Microscopy</A> - Monte Carlo trajectory simulation<BR>
 <A HREF = "overview.html">Parallel Computing</A> - general overviews <BR>
 
-<P>
-</P>
-<HR>
-
-<A NAME = "hrm"></A><H3>How to Reach Me 
-</H3>
-<P>sjplimp at sandia.gov 
-</P>
-Computational Multiscale Dept, MS 1316<BR>
-Sandia National Laboratories<BR>
-Albuquerque, NM 87185-1316 <BR>
-
-<P>
-</P>
-<HR>
-
-<A NAME = "rsl"></A><H3>Related Sandia Links 
-</H3>
-<A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/index.cfm">Center for Computing Research</A><BR>
-<A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/templates/insert/research.cfm">Center research</A><BR>
-<A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/templates/insert/org_chart.cfm">Center staff members</A><BR>
-<A HREF = "https://www.sandia.gov">Sandia National Laboratories</A><BR>
-<A HREF = "https://www.sandia.gov/general/privacy-security/index.html">Sandia Privacy and Security statement</A> <BR>
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- Old header with Sandia logo:
+<table width="664" height="112" border="0" cellpadding="0"
+       cellspacing="0" summary="layout only">
+<tr width="664" height="101" valign="bottom">
+<td width="557" height="101" valign="bottom">
+<font face="arial, helvetica, sans" size="5" 
+      style="family: arial, helvetica, sans"><b>Steve Plimpton</b></font></td>
+<td align="left" valign="bottom" width="107" height="101" rowspan="2">
+<a href="http://www.sandia.gov/">
+<img src="http://www.sandia.gov/images2002/snl_globe_right03.gif" 
+     width="107" height="112" border="0" align="left" valign="top" 
+     vspace="0" hspace="0" alt="Sandia Home" title="Sandia Home"></a></td></tr>
+<tr width="664" height="11" valign="top">
+<td width="557" height="11" valign="top">
+<img src="http://www.sandia.gov/images2002/gold_rule01.gif" 
+     width="557" height="11" border="0" align="left" valign="top" vspace="0" 
+     hspace="0" alt=""></td></tr>
+</table>
+-->
 
 </HTML>
